# veneer

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
crates/veneer/: Cargo.toml
crates/veneer-adapters/: Cargo.toml
crates/veneer-adapters/src/: generator.rs  inline.rs  lib.rs  react.rs  registry.rs  traits.rs
crates/veneer-mdx/: Cargo.toml
crates/veneer-mdx/src/: codeblock.rs  frontmatter.rs  lib.rs  parser.rs
crates/veneer-server/: Cargo.toml
crates/veneer-server/src/: lib.rs  server.rs  watcher.rs  websocket.rs
crates/veneer-static/: Cargo.toml
crates/veneer-static/src/: assets.rs  builder.rs  lib.rs  templates.rs
crates/veneer/src/: main.rs
crates/veneer/src/commands/: build.rs  dev.rs  init.rs  mod.rs  serve.rs
docs/: ARCHITECTURE.md  DEVELOPER.md  USER_GUIDE.md
