[package]
name = "veneer-mdx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MDX parser with frontmatter and code block extraction"

[dependencies]
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
