[package]
name = "veneer-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Development server with hot reload for veneer docs"

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

veneer-mdx = { workspace = true }
veneer-adapters = { workspace = true }
pulldown-cmark = { workspace = true }
open = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
